feat: implement race condition handling for data loading and configure dynamic CORS origins